rename payloadCacheEntries to cache
